--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://smart-office-employee-portal.onrender.com/api/$1"
+    }
   ]
 }
